--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,9 @@
         <item name="android:textColorLink">@color/accent</item>
 
         <item name="android:spinnerStyle">@style/Spinner</item>
+
+        <item name="alertDialogTheme">@style/Theme.Uome.Dialog</item>
+        <item name="android:dialogTheme">@style/Theme.Uome.Dialog</item>
     </style>
 
     <style name="Theme.Uome" parent="@style/Theme.UomeBase"/>
@@ -28,6 +31,10 @@
     <style name="Theme.Uome.HomeAsCross" parent="@style/Theme.Uome">
         <item name="android:homeAsUpIndicator">@drawable/ic_action_navigation_close</item>
         <item name="homeAsUpIndicator">@drawable/ic_action_navigation_close</item>
+    </style>
+
+    <style name="Theme.Uome.Dialog" parent="@style/Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/accent</item>
     </style>
 
 </resources>
