--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
 
         <item name="android:textColorLink">@color/accent</item>
 
-        <item name="android:spinnerStyle">@style/Spinner</item>
+        <item name="spinnerStyle">@style/Spinner</item>
 
         <item name="alertDialogTheme">@style/Theme.Uome.Dialog</item>
         <item name="android:dialogTheme">@style/Theme.Uome.Dialog</item>
