--- a/app/src/main/res/layout/overview.xml
+++ b/app/src/main/res/layout/overview.xml
@@ -19,18 +19,21 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-        <com.example.android.common.view.SlidingTabLayout
-            android:id="@+id/sliding_tabs"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            style="@style/Tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
-            android:background="@color/primary"/>
+            android:background="@color/primary"
+            app:tabGravity="fill"
+            app:tabMode="fixed"/>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_bar"
-            android:layout_below="@+id/sliding_tabs"
+            android:layout_below="@+id/tabs"
             android:foreground="@drawable/bottom_shadow">
 
             <android.support.v4.view.ViewPager
