--- a/app/src/main/res/layout/list_person_bar.xml
+++ b/app/src/main/res/layout/list_person_bar.xml
@@ -25,4 +25,11 @@
         android:layout_centerInParent="true"
         android:text="@string/empty_list_transactions"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButton"
+        style="@style/FloatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_action_add_transaction"/>
+
 </RelativeLayout>
