--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,7 @@
 
     <dimen name="text_size_list_primary">16sp</dimen>
     <dimen name="text_size_list_secondary">14sp</dimen>
+    
+    <dimen name="floating_button_margin">0dp</dimen>
 
 </resources>
