--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,7 +83,7 @@
         <item name="rippleColor">#42FFFFFF</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentRight">true</item>
-        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_margin">@dimen/floating_button_margin</item>
     </style>
 
 </resources>
