floating button in overview

--- a/app/src/main/res/layout/list_person_bar.xml
+++ b/app/src/main/res/layout/list_person_bar.xml
@@ -30,6 +30,8 @@
         style="@style/FloatingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:src="@drawable/ic_action_add_transaction"/>
 
 </RelativeLayout>
