--- a/app/src/main/res/layout/overview.xml
+++ b/app/src/main/res/layout/overview.xml
@@ -36,6 +36,14 @@
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/floatingButton"
+                style="@style/FloatingButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:src="@drawable/ic_action_add_transaction"/>
         </FrameLayout>
 
         <include
