removed obsolete strings - marked untranslatable strings

--- a/app/src/main/res/values/strings_help.xml
+++ b/app/src/main/res/values/strings_help.xml
@@ -27,7 +27,7 @@
         They are based on the principle of deposits and withdrawals (similar to a bank).
         Each person in a group has his/hers own virtual account
         where he/she can deposit to or withdraw money from.
-        You therefore become the group\'s banker, however you may also add youself
+        You therefore become the group\'s banker, however you may also add yourself
         into the group, if you actively participate in the event.
         </p>
         
