--- a/app/src/main/res/layout/add_person.xml
+++ b/app/src/main/res/layout/add_person.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,31 +16,37 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="16dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="20dp"
                 android:contentDescription="@string/hint_person_name"
                 android:src="@drawable/ic_label_person"/>
 
-            <EditText
-                android:id="@+id/nameEditText"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/nameTextLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="48dp"
                 android:hint="@string/hint_person_name"
-                android:inputType="textPersonName"/>
+                app:errorEnabled="true">
+
+                <EditText
+                    android:id="@+id/nameEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_person_name"
+                    android:inputType="textPersonName"/>
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
 
         <!-- Email -->
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="16dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -57,12 +64,15 @@
                 android:inputType="textEmailAddress"/>
         </RelativeLayout>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="24dp"/>
+
         <!-- Description -->
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="16dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -79,6 +89,6 @@
                 android:hint="@string/hint_description"
                 android:inputType="textCapSentences"/>
         </RelativeLayout>
-    </LinearLayout>
 
+    </LinearLayout>
 </ScrollView>
