directory name validation message using InputTextLayout

--- a/app/src/main/res/layout/dialog_create_directory.xml
+++ b/app/src/main/res/layout/dialog_create_directory.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="24dp"
-    android:paddingRight="24dp"
-    android:paddingTop="8dp">
+    android:paddingRight="24dp">
 
-    <EditText
-        android:id="@+id/nameEditText"
+    <android.support.design.widget.TextInputLayout
+        android:id="@id/nameTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/dialog_create_directory_hint"
-        android:singleLine="true"/>
+        app:errorEnabled="true">
+
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/dialog_create_directory_hint"
+            android:singleLine="true"/>
+    </android.support.design.widget.TextInputLayout>
 
 </FrameLayout>
