--- a/app/src/main/res/layout/dialog_create_directory.xml
+++ b/app/src/main/res/layout/dialog_create_directory.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="24dp"
@@ -11,8 +10,7 @@
         android:id="@id/nameTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/dialog_create_directory_hint"
-        app:errorEnabled="true">
+        android:hint="@string/dialog_create_directory_hint">
 
         <EditText
             android:id="@+id/nameEditText"
