--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,7 +50,9 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingLeft">4dp</item>
-        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingRight">32dp</item>
+        <item name="android:focusable">false</item>
+        <item name="android:editable">false</item>
     </style>
 
     <style name="Subheader">
