replaces toasts and error dialog with snacksbars in export activity - group list is now left aligned with the subheader

--- a/app/src/main/res/layout/export.xml
+++ b/app/src/main/res/layout/export.xml
@@ -8,14 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/button_bar"
-        android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:orientation="vertical">
 
         <TextView
             style="@style/Subheader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:text="@string/label_export_directory"/>
 
         <TextView
@@ -23,12 +22,14 @@
             style="@style/Picker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:hint="@string/hint_select_directory"/>
 
         <TextView
             style="@style/Subheader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/label_groups"/>
 
