SelectDirectoryActivity path text is now defined inside AppBarLayout together with a toolbar * no more special theme required - only Theme.Uome.NoActionBar * fixed toolbar title position in landscape - must have height defined by ?android:attr/actionBarSize * moved home menu item handling to BaseActivity

--- a/app/src/main/res/layout/overview.xml
+++ b/app/src/main/res/layout/overview.xml
@@ -10,11 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- XXX setting height to ?android:attr/actionBarSize to fix title position in landscape -->
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             style="@style/ActionBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="?android:attr/actionBarSize"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
