--- a/app/src/main/res/layout/overview.xml
+++ b/app/src/main/res/layout/overview.xml
@@ -2,7 +2,6 @@
 <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,28 +9,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- XXX setting height to ?android:attr/actionBarSize to fix title position in landscape -->
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            style="@style/ActionBar"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
+            style="@style/AppBar"
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"/>
+            android:layout_height="wrap_content">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            style="@style/Tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar"
-            app:tabGravity="fill"
-            app:tabMode="fixed"/>
+            <!-- XXX setting height to ?android:attr/actionBarSize to fix title position in landscape -->
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                style="@style/ActionBar"
+                android:layout_width="match_parent"
+                android:layout_height="?android:attr/actionBarSize"/>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                style="@style/Tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_bar"
-            android:layout_below="@+id/tabs"
-            android:foreground="@drawable/bottom_shadow">
+            android:layout_below="@+id/appBar">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/pager"
