--- a/app/src/main/res/layout/select_directory.xml
+++ b/app/src/main/res/layout/select_directory.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
-        style="@style/ActionBar"
+        style="@style/AppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
