--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,16 +67,17 @@
         <item name="android:textColor">?android:attr/textColorSecondary</item>
     </style>
 
-    <style name="ActionBar">
+    <style name="AppBar" parent="Widget.Design.AppBarLayout">
         <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+    </style>
+
+    <style name="ActionBar">
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-        <item name="android:background">?attr/colorPrimary</item>
     </style>
 
     <style name="Tabs" parent="Widget.Design.TabLayout">
-        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
         <item name="tabIndicatorColor">@android:color/white</item>
-        <item name="android:background">?attr/colorPrimary</item>
+        <item name="tabGravity">fill</item>
     </style>
 
     <style name="FloatingButton">
